0.6.5/_sources/gallery/add_vectors_image.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_vectors_image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_add_vectors_image.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_vectors_image.py:


Add vectors image
=================

This example generates an image of vectors
Vector data is an array of shape (N, M, 2)
Each vector position is defined by an (x-proj, y-proj) element where
* x-proj and y-proj are the vector projections at each center
* each vector is centered on a pixel of the NxM grid

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 13-45



.. image-sg:: /gallery/images/sphx_glr_add_vectors_image_001.png
   :alt: add vectors image
   :srcset: /gallery/images/sphx_glr_add_vectors_image_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    (20, 40) (20, 40, 2)






|

.. code-block:: Python


    import numpy as np

    import napari

    # create the viewer and window
    viewer = napari.Viewer()

    n = 20
    m = 40

    image = 0.2 * np.random.random((n, m)) + 0.5
    layer = viewer.add_image(image, contrast_limits=[0, 1], name='background')

    # sample vector image-like data
    # n x m grid of slanted lines
    # random data on the open interval (-1, 1)
    pos = np.zeros(shape=(n, m, 2), dtype=np.float32)
    rand1 = 2 * (np.random.random_sample(n * m) - 0.5)
    rand2 = 2 * (np.random.random_sample(n * m) - 0.5)

    # assign projections for each vector
    pos[:, :, 0] = rand1.reshape((n, m))
    pos[:, :, 1] = rand2.reshape((n, m))

    # add the vectors
    vect = viewer.add_vectors(pos, edge_width=0.2, length=2.5)

    print(image.shape, pos.shape)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_vectors_image.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_vectors_image.ipynb <add_vectors_image.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_vectors_image.py <add_vectors_image.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_vectors_image.zip <add_vectors_image.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
